--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -375,48 +375,6 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
-body:before {
-  background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-  background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-  background-image: linear-gradient(to left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-  content: "";
-  display: inline-block;
-  height: 100%;
-  left: 0;
-  margin: 0 auto;
-  max-width: 68.75em;
-  opacity: 0.2;
-  pointer-events: none;
-  position: fixed;
-  right: 0;
-  width: 100%;
-  z-index: 9999; }
-  @media screen and (min-width: 70em) {
-    body:before {
-      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
-      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
-      background-image: linear-gradient(to left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%); } }
-  @media screen and (min-width: 50em) {
-    body:before {
-      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
-      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
-      background-image: linear-gradient(to left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%); } }
-  @media screen and (max-width: 49em) {
-    body:before {
-      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
-      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%);
-      background-image: linear-gradient(to left, transparent 0, #000 0, #000 6.17215%, transparent 6.17215%, transparent 8.5298%, #000 8.5298%, #000 14.70196%, transparent 14.70196%, transparent 17.05961%, #000 17.05961%, #000 23.23176%, transparent 23.23176%, transparent 25.58941%, #000 25.58941%, #000 31.76157%, transparent 31.76157%, transparent 34.11922%, #000 34.11922%, #000 40.29137%, transparent 40.29137%, transparent 42.64902%, #000 42.64902%, #000 48.82117%, transparent 48.82117%, transparent 51.17883%, #000 51.17883%, #000 57.35098%, transparent 57.35098%, transparent 59.70863%, #000 59.70863%, #000 65.88078%, transparent 65.88078%, transparent 68.23843%, #000 68.23843%, #000 74.41059%, transparent 74.41059%, transparent 76.76824%, #000 76.76824%, #000 82.94039%, transparent 82.94039%, transparent 85.29804%, #000 85.29804%, #000 91.4702%, transparent 91.4702%, transparent 93.82785%, #000 93.82785%, #000 100.0%, transparent 100.0%); } }
-  @media screen and (max-width: 30em) {
-    body:before {
-      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-      background-image: linear-gradient(to left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%); } }
-  @media screen and (max-height: 25em) {
-    body:before {
-      background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-      background-image: -webkit-linear-gradient(right, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%);
-      background-image: linear-gradient(to left, transparent 0, #000 0, #000 15.3188%, transparent 15.3188%, transparent 21.1703%, #000 21.1703%, #000 36.4891%, transparent 36.4891%, transparent 42.3406%, #000 42.3406%, #000 57.6594%, transparent 57.6594%, transparent 63.5109%, #000 63.5109%, #000 78.8297%, transparent 78.8297%, transparent 84.6812%, #000 84.6812%, #000 100%, transparent 100%); } }
-
 body {
   color: rgba(0, 0, 0, 0.85);
   font-family: "ff-dagny-web-pro", sans-serif;
@@ -452,7 +410,8 @@ h1 {
   .home-hero h1 {
     font-size: 8.97413rem;
     line-height: 8.97413rem;
-    margin: 20px 100px; } }
+    margin: 20px 100px;
+    text-shadow: 3px 3px rgba(0, 0, 0, 0.2); } }
 
 h2 {
   font-family: "Audimat3000-Regulier", sans-serif;
@@ -691,7 +650,8 @@ figcaption.logopack__download:hover {
           transition: color .2s ease;
   box-sizing: border-box;
   background-color: transparent;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.2); }
 
 .default-nav #main-menu ul li a,
 .default-nav #mobile-menu ul li a {
@@ -712,8 +672,7 @@ figcaption.logopack__download:hover {
   -webkit-transition: max-height 0.4s ease-out;
           transition: max-height 0.4s ease-out;
   font-family: "Audimat3000-Leger", sans-serif;
-  text-transform: uppercase;
-  background-color: rgba(0, 0, 0, 0.3); }
+  text-transform: uppercase; }
 
 #main-menu ul li ul li.has-sub:after,
 #mobile-menu ul li ul li.has-sub:after {
@@ -1204,11 +1163,10 @@ figcaption.logopack__download:hover {
   background: black;
   position: fixed;
   z-index: 999;
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
   width: 100%; }
 
 .main-header.home {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: transparent;
   height: 70px; }
   .main-header.home .main-wrapper {
     display: -webkit-box;
@@ -1384,15 +1342,15 @@ nav.nav__mobile {
   left: 0;
   overflow: hidden;
   z-index: -100;
-  -webkit-filter: grayscale(100%) brightness(0.7);
-          filter: grayscale(100%) brightness(0.7); }
+  -webkit-filter: grayscale(80%);
+          filter: grayscale(80%); }
 
 .fullscreen-bg__video {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%; }
+  width: 115%;
+  height: 115%; }
 
 @media (min-aspect-ratio: 16 / 9) {
   .fullscreen-bg__video {
