--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -40,6 +40,7 @@ h1 {
 		    font-size: modular-scale(7, 1.2rem); //32px
 		    line-height: modular-scale(7, 1.2rem);
 		    margin: 20px 100px;
+		    text-shadow: 3px 3px rgba(0,0,0,0.2);
 		}
 	}
 }
