--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -5,12 +5,12 @@
 	// background: yellow;
 	position: fixed;
 	z-index: 999;
-	box-shadow: 0px 0px 7px rgba(0,0,0, 0.3);
+	// box-shadow: 0px 0px 7px rgba(0,0,0, 0.3);
 	width: 100%;
 }
 
 .main-header.home {
-	background-color: rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0.0);
 	height: 70px;
 	.main-wrapper {
 		@include display(flex);
