--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -6,15 +6,15 @@
   left: 0;
   overflow: hidden;
   z-index: -100;
-  filter: grayscale(100%) brightness(0.7);
+  filter: grayscale(80%);
 }
 
 .fullscreen-bg__video {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 115%;
+  height: 115%;
 }
 
 @media (min-aspect-ratio: 16/9) {
