--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -98,6 +98,16 @@
   top: 30px;
 }
 
+.home-nav {
+  #main-menu ul li ul,
+  #mobile-menu ul li ul {
+    position: absolute;
+    left: -9999px;
+    z-index: 9999;
+    top: 10px;
+  }
+}
+
 #main-menu ul li ul li,
 #mobile-menu ul li ul li {
   max-height: 0;
