--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -101,11 +101,18 @@
 .home-nav {
   #main-menu ul li ul,
   #mobile-menu ul li ul {
-    position: absolute;
-    left: -9999px;
-    z-index: 9999;
-    top: 10px;
-  }
+    // position: absolute;
+    // left: -9999px;
+    // z-index: 9999;
+    // top: 10px;
+    // background: rgba(0,0,0,0.3);
+    // padding-top: 0;
+    // margin-top: 0;
+    // li:first-child {
+    //   padding-top: 0;
+    //   margin-top: 0;
+    //   }
+    }
 }
 
 #main-menu ul li ul li,
