--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -28,7 +28,6 @@
 }
 
 #main-menu {
-
    @include media($bp-med, $bp-ls-small) {
     display: none;
   } 
@@ -586,3 +585,41 @@
     text-align: center;
   }
 }
+
+
+// FULLSCREEN MENU
+
+#fullscreen-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background:rgba(0,0,0,0.95);
+  width: 100%;
+  height: 100vh;
+  z-index: 9000;
+}
+
+#fs-menu {
+  position: relative;
+  top: 10%;
+  left: 20%;
+}
+
+#fs-menu ul {
+  list-style-type: none;
+  text-transform: uppercase;
+  
+}
+
+#fs-menu ul li {
+  font-size: modular-scale(4);
+  line-height: modular-scale(4);
+  font-weight: 400;
+  ul li {
+    font-size: modular-scale(2);
+    line-height: modular-scale(2);
+  }
+}
+
+
+
