--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -1098,34 +1098,192 @@ figcaption.logopack__download:hover {
     margin: 0 3px 6px;
     padding: 3px 5px;
     text-align: center; } }
+#toggle-button {
+  position: absolute;
+  top: 25px;
+  right: 80px;
+  z-index: 900000000000;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  background-color: transparent;
+  border: none; }
+  #toggle-button p {
+    text-transform: uppercase;
+    margin: 0;
+    padding-right: 10px; }
+  #toggle-button:focus {
+    outline: none; }
+
+#menu-toggle {
+  position: relative; }
+
+#menu-toggle {
+  display: inline-block;
+  margin: 0;
+  border: none;
+  background: none; }
+  #menu-toggle span {
+    display: block; }
+
+/* ====================== lines button ==================================================*/
+.lines-button {
+  padding: 0;
+  -webkit-transition: .3s;
+          transition: .3s;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border-radius: 0.21429rem;
+  /* */ }
+  .lines-button:hover {
+    opacity: 1; }
+  .lines-button:active {
+    -webkit-transition: 0;
+            transition: 0; }
+
+.lines {
+  display: inline-block;
+  width: 1.5rem;
+  height: 0.1875rem;
+  background: black;
+  border-radius: 0.09375rem;
+  -webkit-transition: 0.3s;
+          transition: 0.3s;
+  position: relative; }
+  .lines:before, .lines:after {
+    display: inline-block;
+    width: 1.5rem;
+    height: 0.1875rem;
+    background: black;
+    border-radius: 0.09375rem;
+    -webkit-transition: 0.3s;
+            transition: 0.3s;
+    position: absolute;
+    left: 0;
+    content: '';
+    -webkit-transform-origin: 0.10714rem center;
+    -ms-transform-origin: 0.10714rem center;
+        transform-origin: 0.10714rem center; }
+  .lines:before {
+    top: 0.375rem; }
+  .lines:after {
+    top: -0.375rem; }
+
+.lines-button:hover .lines:before {
+  top: 0.42857rem; }
+.lines-button:hover .lines:after {
+  top: -0.42857rem; }
+
+.lines-button.close {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8);
+  transform: scale3d(0.8, 0.8, 0.8); }
+
+.lines-button.x.close .lines {
+  background: transparent; }
+  .lines-button.x.close .lines:before, .lines-button.x.close .lines:after {
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+    top: 25px;
+    width: 5rem;
+    background: white; }
+  .lines-button.x.close .lines:before {
+    -webkit-transform: rotate3d(0, 0, 1, 45deg);
+    transform: rotate3d(0, 0, 1, 45deg); }
+  .lines-button.x.close .lines:after {
+    -webkit-transform: rotate3d(0, 0, 1, -45deg);
+    transform: rotate3d(0, 0, 1, -45deg); }
+
+.lines-button.x2 .lines {
+  -webkit-transition: background .3s .5s ease;
+          transition: background .3s .5s ease; }
+  .lines-button.x2 .lines:before, .lines-button.x2 .lines:after {
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+    -webkit-transition: top .3s .6s ease, -webkit-transform .3s ease;
+            transition: top .3s .6s ease, -webkit-transform .3s ease;
+    transition: top .3s .6s ease, transform .3s ease; }
+
+.lines-button.x2.close .lines {
+  -webkit-transition: background .3s 0s ease;
+          transition: background .3s 0s ease;
+  background: transparent; }
+  .lines-button.x2.close .lines:before, .lines-button.x2.close .lines:after {
+    -webkit-transition: top .3s ease, -webkit-transform .3s .5s ease;
+            transition: top .3s ease, -webkit-transform .3s .5s ease;
+    transition: top .3s ease, transform .3s .5s ease;
+    top: 0;
+    width: 1.5rem; }
+  .lines-button.x2.close .lines:before {
+    -webkit-transform: rotate3d(0, 0, 1, 45deg);
+    transform: rotate3d(0, 0, 1, 45deg); }
+  .lines-button.x2.close .lines:after {
+    -webkit-transform: rotate3d(0, 0, 1, -45deg);
+    transform: rotate3d(0, 0, 1, -45deg); }
+
 #fullscreen-menu {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.95);
   width: 100%;
   height: 100vh;
-  z-index: 9000; }
+  z-index: 9000;
+  display: none; }
 
 #fs-menu {
-  display: none;
   position: relative;
-  top: 10%;
-  left: 20%; }
+  top: 12%;
+  left: 42%; }
 
 #fs-menu ul {
-  display: none;
+  font-family: "Audimat3000-Regulier", sans-serif;
   list-style-type: none;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  padding-left: 0;
+  -webkit-transition: all 0.3s;
+          transition: all 0.3s; }
+  #fs-menu ul a span {
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s; }
+    #fs-menu ul a span:hover {
+      color: #fcd838; }
+  #fs-menu ul ul {
+    padding-left: 25px; }
 
 #fs-menu ul li {
-  font-size: 4.736rem;
-  line-height: 4.736rem;
+  font-size: 2.66533rem;
+  line-height: 3.1984rem;
   font-weight: 400; }
   #fs-menu ul li ul li {
-    font-size: 2.66533rem;
-    line-height: 2.66533rem; }
+    font-size: 1.5rem;
+    line-height: 1.7rem;
+    font-weight: 300;
+    font-family: "Audimat3000-Leger", sans-serif; }
 
 .project__gallery {
   height: 500px; }
@@ -1675,24 +1833,32 @@ aside {
   -o-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
-  -webkit-box-lines: multiple;
-  -moz-box-lines: multiple;
-  box-lines: multiple;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column; }
   .team__container .team__single {
-    -webkit-box-flex: 0;
-    box-flex: 0;
-    -webkit-flex: 0 0 30%;
-    -moz-flex: 0 0 30%;
-    -ms-flex: 0 0 30%;
-    flex: 0 0 30%;
-    margin: 0 1.5%; }
+    position: relative;
+    height: 350px;
+    -webkit-box-flex: 100%;
+    box-flex: 100%;
+    -webkit-flex: 100%;
+    -moz-flex: 100%;
+    -ms-flex: 100%;
+    flex: 100%; }
     .team__container .team__single img {
-      position: relative;
-      max-width: 100%;
-      height: auto; }
+      position: absolute;
+      width: auto;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 600; }
+    .team__container .team__single hgroup {
+      z-index: 6000000; }
 
 .projects__panel-container {
   margin-top: 50px; }
