--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -27,16 +27,21 @@
 		position: relative;
 		height: 350px;
 		@include flex(100%); 
-		img {
+		figure {
 			position: absolute;
-			width: auto;
-			height: 100%;
 			top: 0;
 			left: 0;
+			background-position: top center;
+			background-size: cover;
+			width: 100%;
+			height: 100%;
+			filter: grayscale(100%) brightness(0.7);
 			z-index: 600;
 		}
 		hgroup {
-			z-index: 6000000;
+			position: relative;
+			padding: 0 25px;
+			z-index: 90000000000;
 		}
 	}
 }
