--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -24,24 +24,25 @@
 	@include justify-content(center);
 	@include flex-direction(column);
 	.team__single {
+		background-color: $yellow;
 		position: relative;
-		height: 350px;
+		height: 300px;
 		@include flex(100%); 
 		figure {
 			position: absolute;
 			top: 0;
 			left: 0;
-			background-position: top center;
+			background-position: center center;
 			background-size: cover;
 			width: 100%;
 			height: 100%;
-			filter: grayscale(100%) brightness(0.7);
-			z-index: 600;
+			filter: grayscale(100%) brightness(0.9);
+			z-index: 3;
 		}
 		hgroup {
 			position: relative;
 			padding: 0 25px;
-			z-index: 90000000000;
+			z-index: 4;
 		}
 	}
 }
