--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -1856,12 +1856,8 @@ aside {
     background-color: #fcd838;
     position: relative;
     height: 300px;
-    -webkit-box-flex: 100%;
-    box-flex: 100%;
-    -webkit-flex: 100%;
-    -moz-flex: 100%;
-    -ms-flex: 100%;
-    flex: 100%; }
+    width: 100%;
+    margin-bottom: 25px; }
     .team__container .team__single figure {
       position: absolute;
       top: 0;
