--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -26,9 +26,14 @@
 	.team__single {
 		background-color: $yellow;
 		position: relative;
-		height: 300px;
+		min-height: 300px;
 		width: 100%;
 		margin-bottom: 25px;
+		transition: all 0.3s;
+		&:hover {
+			cursor: pointer;
+			background-color: darken($yellow, 10%);
+		}
 		figure {
 			position: absolute;
 			top: 0;
