--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -18,6 +18,7 @@
 @import "components/buttons";
 @import "components/navigation";
 @import "components/gallery";
+@import "components/pushpanel";
 
 
 @import "layout/footer";
