--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -476,6 +476,21 @@ span.black-highlight {
   background-color: black;
   padding: 5px 10px; }
 
+.home-hero h2,
+.default-hero h2 {
+  color: white;
+  text-align: center;
+  margin: 20px 125px; }
+  @media screen and (min-width: 50em) {
+    .home-hero h2,
+    .default-hero h2 {
+      font-size: 2.66533rem;
+      line-height: 2.66533rem; } }
+
+.default-hero h1 {
+  color: black;
+  padding: 15px 20px; }
+
 .navigation {
   font-family: "Audimat3000-Regulier", sans-serif; }
 
@@ -546,6 +561,19 @@ main p.no-space {
       .cta-contact p {
         font-size: 0.8rem;
         line-height: 2.66533rem; } }
+
+h1.team__hero-heading {
+  font-size: 6.31309rem;
+  line-height: 6.31309rem;
+  margin: 0;
+  padding-bottom: 0; }
+
+h2.team__hero-subheading {
+  font-family: "ff-dagny-web-pro", sans-serif;
+  font-weight: 300;
+  font-size: 1.2rem;
+  line-height: 1.5996rem;
+  margin: 25px 15%; }
 
 .team__name {
   font-size: 8.41535rem;
@@ -1364,6 +1392,185 @@ li.current_page_item a {
   text-align: center;
   line-height: 1; }
 
+/* General styles for all menus */
+.cbp-spmenu {
+  background: black;
+  position: fixed;
+  padding: 50px 25%;
+  overflow-y: scroll; }
+  .cbp-spmenu ul {
+    color: white;
+    margin-top: -20px; }
+  .cbp-spmenu button {
+    padding: 5px 10px;
+    -webkit-transition: all 0.5s;
+            transition: all 0.5s; }
+    .cbp-spmenu button:hover {
+      background-color: #fcd838;
+      border: none;
+      padding: 10px 15px; }
+
+.cbp-spmenu h3 {
+  color: white;
+  font-size: 1.9em;
+  padding: 20px;
+  margin: 0;
+  font-weight: 300;
+  background: black; }
+
+.cbp-spmenu p {
+  color: white;
+  font-family: "ff-dagny-web-pro", sans-serif;
+  font-weight: 300; }
+
+/* Orientation-dependent styles for the content of the menu */
+.cbp-spmenu-vertical {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 1000; }
+
+.cbp-spmenu-vertical a {
+  border-bottom: 1px solid #258ecd;
+  padding: 1em; }
+
+.cbp-spmenu-horizontal {
+  width: 100%;
+  height: 150px;
+  left: 0;
+  z-index: 1000;
+  overflow: hidden; }
+
+/* Vertical menu that slides from the left or right */
+.cbp-spmenu-left {
+  left: -240px; }
+
+.cbp-spmenu-right {
+  right: -100%; }
+
+.cbp-spmenu-left.cbp-spmenu-open {
+  left: 0px; }
+
+.cbp-spmenu-right.cbp-spmenu-open {
+  right: 0px; }
+
+/* Push classes applied to the body */
+.cbp-spmenu-push {
+  overflow-x: hidden;
+  position: relative;
+  left: 0; }
+
+.cbp-spmenu-push-toright {
+  left: 100%; }
+
+.cbp-spmenu-push-toleft {
+  left: -100%; }
+
+/* Transitions */
+.cbp-spmenu,
+.cbp-spmenu-push {
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
+
+/* Example media queries */
+@media screen and (max-width: 55.1875em) {
+  .cbp-spmenu-horizontal {
+    font-size: 75%;
+    height: 110px; }
+
+  .cbp-spmenu-top {
+    top: -110px; }
+
+  .cbp-spmenu-bottom {
+    bottom: -110px; } }
+@media screen and (max-height: 26.375em) {
+  .cbp-spmenu-vertical {
+    font-size: 90%;
+    width: 190px; }
+
+  .cbp-spmenu-left,
+  .cbp-spmenu-push-toleft {
+    left: -190px; }
+
+  .cbp-spmenu-right {
+    right: -190px; }
+
+  .cbp-spmenu-push-toright {
+    left: 190px; } }
+.main-footer {
+  min-height: 400px;
+  background: black;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column; }
+  @media screen and (min-width: 50em) {
+    .main-footer {
+      -webkit-box-orient: horizontal;
+      box-orient: horizontal;
+      -webkit-box-direction: normal;
+      box-direction: normal;
+      -webkit-flex-direction: row;
+      -moz-flex-direction: row;
+      flex-direction: row;
+      -ms-flex-direction: row; } }
+
+.footer__blog,
+.footer__news,
+.footer__map {
+  -webkit-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 0 auto;
+  -moz-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto; }
+  @media screen and (min-width: 50em) {
+    .footer__blog,
+    .footer__news,
+    .footer__map {
+      -webkit-box-flex: 0;
+      box-flex: 0;
+      -webkit-flex: 0 0 30%;
+      -moz-flex: 0 0 30%;
+      -ms-flex: 0 0 30%;
+      flex: 0 0 30%;
+      margin: 0 1.5%;
+      height: 350px; } }
+
+.footer__map {
+  position: relative; }
+  .footer__map iframe {
+    position: relative;
+    width: 100%;
+    height: 100%; }
+
 .main-header {
   height: 90px;
   background: black;
@@ -1510,16 +1717,6 @@ li.current_page_item a {
     -moz-flex-direction: column;
     flex-direction: column;
     -ms-flex-direction: column; }
-  .home-hero h2,
-  .default-hero h2 {
-    color: white;
-    text-align: center;
-    margin: 20px 125px; }
-    @media screen and (min-width: 50em) {
-      .home-hero h2,
-      .default-hero h2 {
-        font-size: 2.66533rem;
-        line-height: 2.66533rem; } }
 
 .home-hero {
   min-height: 100vh; }
@@ -1533,11 +1730,6 @@ li.current_page_item a {
 .default-hero {
   width: 100%;
   min-height: 80vh; }
-  .default-hero hgroup {
-    margin-top: 100px; }
-    .default-hero hgroup h1 {
-      color: black;
-      padding: 15px 20px; }
 
 nav.nav__mobile {
   display: none; }
@@ -1855,9 +2047,14 @@ aside {
   .team__container .team__single {
     background-color: #fcd838;
     position: relative;
-    height: 300px;
+    min-height: 300px;
     width: 100%;
-    margin-bottom: 25px; }
+    margin-bottom: 25px;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s; }
+    .team__container .team__single:hover {
+      cursor: pointer;
+      background-color: #fbce06; }
     .team__container .team__single figure {
       position: absolute;
       top: 0;
