--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -19,6 +19,7 @@
 @import "components/navigation";
 @import "components/gallery";
 @import "components/pushpanel";
+@import "components/animate";
 
 
 @import "layout/footer";
@@ -28,5 +29,6 @@
 @import "layout/sidebar";
 @import "layout/team";
 @import "layout/projects";
+@import "layout/contact";
 
 
